# egui-inspect

./: Cargo.toml  README.md
demo/: Cargo.toml  index.html
demo/src/: app.rs  lib.rs  main.rs
egui-inspect-derive/: Cargo.toml
egui-inspect-derive/src/: lib.rs
src/: lib.rs
