[package]
name = "egui-inspect-derive"
version = "0.1.0"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
homepage = "https://github.com/matthewjberger/egui-inspect"
repository = "https://github.com/matthewjberger/egui-inspect"
keywords = ["egui"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
egui = "0.21.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"


